<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="-0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/chat_incoming_triangle"
        android:contentDescription="@string/chat"
        android:rotation="0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/senders_msg_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="4dp"
            android:maxWidth="256dp"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/dummy_text"
            android:textColor="@color/secondaryGrey" />

        <TextView
            android:id="@+id/tvMsgTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="1dp"
            android:text="@string/date"
            android:textColor="@color/secondaryGrey"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>