<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="end"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/outgoing_msg_backgroung"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="wrap_content"
            android:maxWidth="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="4dp"
            android:paddingBottom="4dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:text="@string/dummy_text"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/tvMsgTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="18dp"
            android:gravity="end"
            android:paddingBottom="6dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="2dp"
            android:text="@string/date"
            android:textColor="@android:color/white"
            android:textSize="10sp" />

    </LinearLayout>
    <ImageView
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginTop="8dp"
        android:rotation="-90"
        android:layout_marginStart="-0dp"
        android:background="@drawable/chat_triangel_outgoing"
        android:contentDescription="@string/chat"/>
</LinearLayout>