<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:minHeight="?attr/actionBarSize">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:padding="0dp"
        android:src="@drawable/left_arrow_light_solid" />

    <in.enzen.taskforum.civ.CircleImageView
        android:id="@+id/civReceiverPic"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/white_circle_background"
        android:contentDescription="@string/user_image"
        android:padding="4dp"
        android:src="@drawable/avatar_default" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvToolbarUserTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textColor="@android:color/background_light"
            android:textSize="13sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivSos"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="54dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_sos"
            tools:ignore="VectorDrawableCompat" />

        <ImageView
            android:id="@+id/ivLogout"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_logout_24px"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>
</android.support.v7.widget.Toolbar>