<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        tools:ignore="UseLessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_name"
                android:src="@drawable/semicolon_india_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Semicolon India Pvt Ltd."
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/about_us"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/semicolon_india_text"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:text="@string/we_are_available_at"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/app_contact"
                android:textColor="@android:color/black"
                android:drawableStart="@drawable/ic_at_holo"
                android:drawablePadding="2dp"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="end|center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/image_name"
                        android:src="@drawable/ic_call_holo" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvCompanyNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/support_number_semi"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_weight="0.3"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/image_name"
                        android:src="@drawable/ic_marker_holo" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvCompanyAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/dev_address"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>