<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/bottom_line_light"
        android:gravity="center_vertical"
        android:paddingEnd="24dp"
        android:paddingStart="24dp"
        android:text="@string/change_password"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/email"
                android:src="@drawable/ic_lock_light" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@android:color/darker_gray" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etPwdOld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line_light"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingEnd="6dp"
                    android:paddingStart="6dp"
                    android:textColor="@color/secondaryGrey"
                    android:textColorHint="@color/secondaryGrey" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/email"
                android:src="@drawable/ic_lock_light" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@android:color/darker_gray" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/etNewPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line_light"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingBottom="4dp"
                    android:paddingEnd="6dp"
                    android:paddingStart="6dp"
                    android:textColor="@color/secondaryGrey"
                    android:textColorHint="@color/secondaryGrey" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_secoundary"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/button_background_primary"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textSize="17sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>